...
              <Card.Content>
                <VolunteerAvatar
                  style={{
                    alignSelf: 'center',
                    justifyContent: 'center',
                  }}
                  testID="profilePic"
                  size="LARGE"
                  isProfilePicture={true}
                  source={{uri: uploadImg?.uri}}
                />
                <ProgressBar
                  style={{marginTop: '2.5%'}}
...
              }}>
              <Image
                style={{height: '100%', width: '100%', overflow: 'visible'}}
                source={Edit_Icon}
              />
            </TouchableOpacity>
            <Title style={{alignSelf: 'center'}} testID="firestoreName">
              {userData?.firstName}{' '}
            </Title>
          </Card.Content>
        </Card>

        {/* BIO CARD */}
...
            }}>
            <Subheading>Bio</Subheading>

            {editBio ? (
              <TextInput
                mode="outlined"
                testID="editBio"
                onChangeText={(updatedBio) => {
                  setBio(updatedBio);
                }}
                autoFocus={true}
                defaultValue={userData?.bio}
              />
            ) : (
              <Paragraph testID="bio">{bio}</Paragraph>
            )}
            <TouchableOpacity
              testID="editBioButton"
              onPress={() => {
                console.log('EDIT BIO PRESSED');

                setEditBio((editBio) => !editBio);
                if (editBio) {
                  updateOwnBio(bio, uid);
...
            />
          </Card.Content>
        </Card>
        <Card style={{margin: '2%', marginBottom: '10%'}}>
          <Card.Actions style={{justifyContent: 'space-around'}}>
            <CloseButton
              testID="signOutButton"
              onPress={() => {
                signOut().then(() => {
                  dispatch(updateRoleSpecificSessions([]));
                  dispatch(updateSessions([]));
                  dispatch(updateFirestoreUserData({}));
                });
...
